<?xml version="1.0"?>
<package format="2">
  <name>ares_control</name>
  <version>0.0.0</version>
  <description>The ares_control package</description>
  <maintainer email="efe.akkilic@ozu.edu.tr">Toprak Efe</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
